--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
-<div style="display: none;" id="hiddenText">This is hidden</div>
+<div style="display: none;" id="hiddenText">This is hidden bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
 <a href="#" onclick="document.getElementById('hiddenText').style.display="block"; return false;">Click here to show hidden text</a>
 	
 <br>
