--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ Email: siham AT ugr.es<br>
 
 <div style="display: none;" id="hiddenText">This is hidden bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb</div>
 <a href="#" onclick="document.getElementById('hiddenText').style.display="block"; return false;">Click here to show hidden text</a>
+
+	
+<div style="display: none;" id="hiddenText">This is hidden: bla bla bla bla ba</div>
+<a href="#" onclick="$('#hiddenText').show(); return false;">Click here to show hidden text</a>
 	
 <br>
 
