--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@ School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
+   <a href="javascript:void(0);" onclick="show();">Add Deposit Threshold</a>
+    <div id="dThreshold" style="display: none">
+        ..........................................
+    </div>
 	
 <br>
 
