--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@ School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
+    <script type="text/javascript">
+        function show() {
+            //document.getElementById("dThreshold").display ="block";
+            document.getElementById("dThreshold").style.display = "block";
+        }
+    </script>	
+	
    <a href="javascript:void(0);" onclick="show();">Add Deposit Threshold</a>
     <div id="dThreshold" style="display: none">
-        ..........................................
+        .............blablabla.............................
     </div>
 	
 <br>
