--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@ Email: siham AT ugr.es<br>
     <div id="dThreshold" style="display: none">
         .............blablabla.............................
     </div>
+
+<button onclick="myFunction()">Click Me</button>
+
+<div id="myDIV">
+  This is my DIV element.
+</div>	
 	
 <br>
 
