--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@ Email: siham AT ugr.es<br>
         .............blablabla.............................
     </div>
 
+function myFunction() {
+    var x = document.getElementById('myDIV');
+    if (x.style.display === 'none') {
+        x.style.display = 'block';
+    } else {
+        x.style.display = 'none';
+    }
+}	
+	
+	
 <button onclick="myFunction()">Click Me</button>
 
 <div id="myDIV">
