--- a/index.html
+++ b/index.html
@@ -12,33 +12,26 @@ School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
-    <script type="text/javascript">
-        function show() {
-            //document.getElementById("dThreshold").display ="block";
-            document.getElementById("dThreshold").style.display = "block";
-        }
-    </script>	
-	
-   <a href="javascript:void(0);" onclick="show();">Add Deposit Threshold</a>
-    <div id="dThreshold" style="display: none">
-        .............blablabla.............................
-    </div>
+ <script> 
+    function show() { 
+        if(document.getElementById('benefits').style.display=='none') { 
+            document.getElementById('benefits').style.display='block'; 
+        } 
+        return false;
+    } 
+    function hide() { 
+        if(document.getElementById('benefits').style.display=='block') { 
+            document.getElementById('benefits').style.display='none'; 
+        } 
+        return false;
+    }   
+</script> 
 
-function myFunction() {
-    var x = document.getElementById('myDIV');
-    if (x.style.display === 'none') {
-        x.style.display = 'block';
-    } else {
-        x.style.display = 'none';
-    }
-}	
-	
-	
-<button onclick="myFunction()">Click Me</button>
 
-<div id="myDIV">
-  This is my DIV element.
-</div>	
+ <div id="opener"><a href="#1" name="1" onclick="return show();">click here</a></div> 
+    <div id="benefits" style="display:none;">bla bla bla bla ... some input in here plus the close button 
+           <div id="upbutton"><a onclick="return hide();">click here</a></div> 
+    </div>   
 	
 <br>
 
