--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ Email: siham AT ugr.es<br>
 </script> 
 
 
- <div id="opener"><a href="#1" name="1" onclick="return show();">click here</a></div> 
+ <div id="opener"><a href="#1" name="1" onclick="return show();">open here</a></div> 
     <div id="benefits" style="display:none;">bla bla bla bla ... some input in here plus the close button 
-           <div id="upbutton"><a onclick="return hide();">click here</a></div> 
+           <div id="upbutton"><a href="#1" onclick="return hide();">close here </a></div> 
     </div>   
 	
 <br>
