--- a/index.html
+++ b/index.html
@@ -32,6 +32,27 @@ Email: siham AT ugr.es<br>
     <div id="benefits" style="display:none;">bla bla bla bla ... some input in here plus the close button 
            <div id="upbutton"><a href="#1" onclick="return hide();">close here </a></div> 
     </div>   
+
+	............................<br>
+	 function showhide()
+     {
+           var div = document.getElementById("newpost");
+    if (div.style.display !== "none") {
+        div.style.display = "none";
+    }
+    else {
+        div.style.display = "block";
+    }
+     }
+	
+	<div id="newpost">
+
+This div will be show and hide on button click</div>
+<button id="button" onclick="showhide()">Click Me</button>
+	
+	
+	
+	.............................
 	
 <br>
 
