--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ Email: siham AT ugr.es<br>
     </div>   
 
 	............................<br>
-	 function showhide()
+ <script> 
+	function showhide()
      {
            var div = document.getElementById("newpost");
     if (div.style.display !== "none") {
@@ -44,6 +45,7 @@ Email: siham AT ugr.es<br>
         div.style.display = "block";
     }
      }
+</script> 
 	
 	<div id="newpost">
 
