--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ University of Granada<br>
 Email: siham AT ugr.es<br>
 
 
-<--! Define a func-->
-<--! 
+<!-- Define a func-->
+<!--
  <script> 
 	function showhide()
      {
