--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ University of Granada<br>
 Email: siham AT ugr.es<br>
 
 
+	
 <!-- Define a func-->
 <!--
  <script> 
@@ -35,6 +36,13 @@ Email: siham AT ugr.es<br>
 <br>
 
 <h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow </h2>    
+Content:<br>
+<ol>  <li> Install TensorFlow with virtual Python environment </li>
+<ol> My Hello World! example	
+<ol> Classify Imagenet		
+<ol> Retrain on New dataset
+</ol>
+	
 <ol>
   <!-- Install -->	
 	
@@ -108,7 +116,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 
 </ol> 
 	
-<li><h2>My Hello World! example</h2></li>
+<li><h2>My "Hello World!" example</h2></li>
 MNIST is the Hello World! of Deep Learning CNNs. <br>      
 &bull; Let's train LeNet-5-like convolutional Network on MNIST dabase. <br>
 &bull; First go to the mnist floder.<br>	
