--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@ Email: siham AT ugr.es<br>
 
 <h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow </h2>    
 Content:<br>
-<ol>  Install TensorFlow with virtual Python environment 
-<li> My Hello World! example	
-<li> Classify Imagenet		
-<li> Retrain on New dataset
+<ol>  
+<li>Install TensorFlow with virtual Python environment 
+<li>My Hello World! example	
+<li>Classify Imagenet		
+<li>Retrain on New dataset
 </ol>
 	
 <ol>
