--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 </ol> 
 	
 <li><h2>My "Hello World!" example</h2></li>
-MNIST is the Hello World! of Deep Learning CNNs. <br>      
+To get familiar with CNNs, consider the MNIST daabase, which is used as "Hello World!" example in Deep CNNs. <br> The       
 &bull; Let's train LeNet-5-like convolutional Network on MNIST dabase. <br>
 &bull; First go to the mnist floder.<br>	
 <table><tr  bgcolor="#CCFFFF"><td>	
@@ -136,8 +136,9 @@ If you wish to supply other JPEG images, you may do so by editing the <xmp> --im
 
 If you download the model data to a different directory, you will need to point <xmp>--model_dir</xmp> to the directory used.<br>
 
-  <li><h2>Finetuning GoogLeNet Final Layer on a New dataset</h2></li>
- Download new dataset <br>
+  <li><h2>Retrain on a New dataset</h2></li>
+This consists of finetuning GoogLeNet's final layer on a new dataset, flower_photos, as follows: <br> 
+Download new dataset <br>
  <table>
    <tr  bgcolor="#CCFFFF"><td>
        <xmp> cd ~ </xmp>
