--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@ If the system outputs the following, then you are ready to begin writing TensorF
 </ol> 
 	
 <li><h2>My "Hello World!" example</h2></li>
-To get more familiar with CNNs, let's start with the MNIST database, which is used as the "Hello World!" example in Deep CNNs. <br> 
-The first successful CNN in MNIST classification is called LeNet. The implementation of LeNet-5-like can be found in this folder. <br>
+To get more familiar with CNNs, let's start with the classification of MNIST database, which is used as the "Hello World!" example in Deep CNNs. <br> 
+The first successful CNN in MNIST classification is called LeNet. <br>
+The implementation of LeNet-5-like CNN can be found in this folder. <br>
 
 	
 <table><tr  bgcolor="#CCFFFF"><td>	
