--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@ School of Informatics<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
+<h2> Influential papers in CNNs </h2>  
+<ul> 
+<li>	Yann LeCun, Leon Bottou, Yoshua Bengio, and Patrick Haffner. Gradient-based learning applied to
+document recognition. Proc. IEEE, 86(11):2278–2324, 1998.
+
+<li>
+</ul>
 
 	
 <!-- Define a func-->
