--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ document recognition. Proc. IEEE, 86(11):2278–2324, 1998.
 -->		
 <br>
 
-<h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow </h2>    
+<h2>  </h2>
+<a href="tutorial.html" target="_blank">Hands-on lab: Building CNNs based-classifiers with TensorFlow</a>
+	
 Content:<br>
 <ol>  
 <li>Install TensorFlow with virtual Python environment 
