--- a/index.html
+++ b/index.html
@@ -42,160 +42,9 @@ document recognition. Proc. IEEE, 86(11):2278–2324, 1998.
 -->		
 <br>
 
-<h2>  </h2>
-<a href="tutorial.html" target="_blank">Hands-on lab: Building CNNs based-classifiers with TensorFlow</a>
-	
-Content:<br>
-<ol>  
-<li>Install TensorFlow with virtual Python environment 
-<li>My Hello World! example	
-<li>Classify Imagenet		
-<li>Retrain on New dataset
-</ol>
-	
-<ol>
-  <!-- Install -->	
-	
-  <li><h2> Install TensorFlow with virtual Python environment </h2></li>
-  TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability under Windows OS).<br><br>
-  
-	
-  TensorFlow can be installed using four different mecanisms. We will use the recomenaded virtualenv instalation. The steps are as follows: <br><br>
-	
-<ol>
-  <li> Install pip and virtualenv by issuing the following command:<br>
-<table>
-   <tr  bgcolor="#CCFFFF"><td>	
-<xmp> sudo apt-get install python-pip python-dev python-virtualenv</xmp>
-	    </td>
-   </tr>
-</table>
-  <li> Create a virtualenv environment by issuing the following command:<br>
-<table>
-   <tr  bgcolor="#CCFFFF"><td>	
-<xmp> virtualenv --system-site-packages targetDirectory </xmp>
-</td></tr></table>
-
-The targetDirectory specifies the top of the virtualenv tree. Our instructions assume that targetDirectory is ~/tensorflow, but you may choose any directory.
-<li> Activate the virtualenv environment by issuing one of the following commands:
-<table><tr  bgcolor="#CCFFFF"><td>	
- <xmp> source ~/tensorflow/bin/activate # bash, sh, ksh, or zsh</xmp>
- <xmp> source ~/tensorflow/bin/activate.csh  # csh or tcsh</xmp>
-</td> </tr></table> 
-The preceding source command should change your prompt to the following:<br>
-<table><tr  bgcolor="#CCFFFF"><td>	
-<xmp> (tensorflow)$ </xmp>
-</td> </tr></table>
-	  
-<li> Issue one of the following commands to install TensorFlow in the active virtualenv environment:<br>
-<br> If you have 1) NVIDIA® GPU with Compute Capability 3.0 or higher and 2) cuDNN v5.1 v3 or greater then you can install  tensorflow-gpu, which os prepared to run on one and multiple NVIDIA GPUs.<br>	
-
-<table><tr  bgcolor="#CCFFFF"><td>	
-<xmp> (tensorflow)$ pip install --upgrade tensorflow-gpu  # for Python 2.7 and GPU</xmp>
-<xmp> (tensorflow)$ pip3 install --upgrade tensorflow-gpu # for Python 3.n and GPU</xmp>
-</td></tr></table>
-	
-If you don't have GPUs with the mentioned characteristics then:<br>
-<table><tr  bgcolor="#CCFFFF"><td>		
-<xmp> (tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
-<xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
-</td> </tr></table>
-	
-<!-- Check installation is OK -->	
-<li> Check the installation has been done successfully <br>
-Invoke python from your shell as follows: <br>
-
-<table><tr  bgcolor="#CCFFFF"><td>		
-<xmp> (tensorflow)$ python </xmp>
-</td> </tr></table>
-Enter the following short program inside the python interactive shell: <br>
-	
-<table><tr  bgcolor="#CCFFFF"><td>		
-<xmp># Python</xmp>
-<xmp>import tensorflow as tf</xmp>
-<xmp>hello = tf.constant('Hello, TensorFlow!')</xmp>
-<xmp>sess = tf.Session()</xmp>
-<xmp>print(sess.run(hello))</xmp>
-</td> </tr></table>
-	
-If the system outputs the following, then you are ready to begin writing TensorFlow programs:<br>
-<table><tr  bgcolor="#CCFFFF"><td>		
-<xmp>Hello, TensorFlow!</xmp>
-</td> </tr></table>
-
-
-</ol> 
-	
-<li><h2>My "Hello World!" example</h2></li>
-To get more familiar with CNNs, let's start with the classification of MNIST database, which is used as the "Hello World!" example in Deep CNNs. <br> 
-The first successful CNN in MNIST classification is called LeNet. <br>
-The implementation of LeNet-5-like CNN can be found in this folder. <br>
-
-	
-<table><tr  bgcolor="#CCFFFF"><td>	
-<xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
-</td> </tr></table>
-	
-Have a look at how LeNet is implemented in tensorflow:
-	
-<table><tr  bgcolor="#CCFFFF"><td>	
-<xmp>vi  convolutional.py  
-</xmp>
-</td> </tr></table>	
-<li><h2>Classify Imagenet</h2></li>
  
-<xmp> cd models/tutorials/image/imagenet</xmp>
-<xmp> python classify_image.py</xmp>
-If the model runs correctly, the script will produce the top five classes with their respective scores.<br>
-If you wish to supply other JPEG images, you may do so by editing the <xmp> --image_file </xmp> argument.<br>
-
-If you download the model data to a different directory, you will need to point <xmp>--model_dir</xmp> to the directory used.<br>
-
-  <li><h2>Retrain on a New dataset</h2></li>
-This consists of finetuning GoogLeNet's final layer on a new dataset, flower_photos, as follows: <br> 
-Download new dataset <br>
- <table>
-   <tr  bgcolor="#CCFFFF"><td>
-       <xmp> cd ~ </xmp>
-       <xmp> curl -O http://download.tensorflow.org/example_images/flower_photos.tgz </xmp>
-       <xmp> tar xzf flower_photos.tgz </xmp> </font>
-
-	 </td>
-   </tr>
-</table>
- Download retrain.py   <br>   
-<table>
-   <tr  bgcolor="#CCFFFF"><td>	
-       <xmp> cd  ~/tensorflow/lib/python2.7/site-packages/tensorflow/examples/ </xmp>
-       <xmp> mkdir image_retraining </xmp>
-       <xmp> curl -O https://raw.githubusercontent.com/tensorflow/tensorflow/r1.1/tensorflow/examples/image_retraining/retrain.py </xmp>
- 	 </td>
-   </tr>
-</table>
-
-	   Have a look at retrain.py and costumize where you want to download the GoogLeNet, also called Inception model, bottelneck, . By default the model is downloaded in /tmp. 
-<table>
-        <tr  bgcolor="#CCFFFF"><td>	
-	<xmp> python retrain.py --image_dir ~/flower_photos {add your args here} </xmp>
-	</td>
-   </tr>
-</table>	
-This script 1) loads the pre-trained GoogLeNet model, 2) removes the old top FC layer, also called Bottleneck, and 3) trains a new one
-on the flower photos you've downloaded. None of the flower species were in the original ImageNet classes the full network was
-trained on.  The magic of transfer learning, also called fine-tuning, is that lower layers that have been trained to distinguish 
-	between some objects can be reused for many recognition tasks without any alteration.
-<br>
-<!--
-2017-06-15 13:50:09.216886: Step 3999: Train accuracy = 95.0%<br>
-2017-06-15 13:50:09.216944: Step 3999: Cross entropy = 0.186286<br>
-2017-06-15 13:50:09.261670: Step 3999: Validation accuracy = 93.0% (N=100)<br>
-Final test accuracy = 93.7% (N=378)<br>
-Converted 2 variables to const ops.<br>
--->
-        
-        </ol>      
-
-
+<a href="tutorial.html" target="_blank"><h1> Hands-on lab: Building CNNs based-classifiers with TensorFlow</h1></a>
+	
 
 <h2></h2>    
 <h2></h2>
