--- a/tutorial.html
+++ b/tutorial.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 
-Content:<br>
+<h2>Building CNNs based-classifiers with TensorFlow </h2>	
+<h1>Content:</h1><br>
 <ol>  
 <li>Install TensorFlow with virtual Python environment 
 <li>My Hello World! example	
