--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@ Email: siham AT ugr.es<br>
 -->		
 <br>
 
+<ol>	
  
-<a href="tutorial.html" target="_blank"><h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow</h2></a>
+<li><a href="tutorial.html" target="_blank"><h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow</h2></a>
 	
-<h2> Influential papers in CNNs </h2>  
+<li><h2> Influential papers in CNNs </h2>  
 <ul> 
 <li>	Yann LeCun, Leon Bottou, Yoshua Bengio, and Patrick Haffner. Gradient-based learning applied to
 document recognition. Proc. IEEE, 86(11):2278–2324, 1998.
 
 </ul>
-
+</ol>
 <h2></h2>    
 <h2></h2>
 
