--- a/tutorial.html
+++ b/tutorial.html
@@ -94,14 +94,20 @@ The implementation of LeNet-5-like CNN can be found in this folder. <br>
 <xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
 </td> </tr></table>
 	
-Have a look at how LeNet is implemented in tensorflow then run as follows:
+Have a look at how LeNet is implemented, convolutional.py, then run it using:
 	
 <table><tr  bgcolor="#CCFFFF"><td>	
-<xmp> python   convolutional.py # train on CPU/GPU depending on the installation</xmp>
-<xmp>CUDA_VISIBLE_DEVICES=0,1 python   convolutional.py # train on selected GPUs with identifiers 0 and 1</xmp>
+<xmp>python   convolutional.py # train on CPU/GPU depending on the installation</xmp>
 </td> </tr></table>	
 <li><h2>Classify Imagenet</h2></li>
- 
+or<br> 
+	
+
+<table><tr  bgcolor="#CCFFFF"><td>	
+<xmp>CUDA_VISIBLE_DEVICES=0,1 python   convolutional.py # train on selected GPUs with identifiers 0 and 1</xmp>
+</td> </tr></table>	
+<li><h2>Classify Imagenet</h2></li>	
+	
 <xmp> cd models/tutorials/image/imagenet</xmp>
 <xmp> python classify_image.py</xmp>
 If the model runs correctly, the script will produce the top five classes with their respective scores.<br>
