--- a/tutorial.html
+++ b/tutorial.html
@@ -151,6 +151,10 @@ on the flower photos you've downloaded. None of the flower species were in the o
 trained on.  The magic of transfer learning, also called fine-tuning, is that lower layers that have been trained to distinguish 
 	between some objects can be reused for many recognition tasks without any alteration.
 <br>
+Use this python to test your retrained model<br>	
+	
+<a href="label_images.py">label_images.py</a><br>	
+	
 <!--
 2017-06-15 13:50:09.216886: Step 3999: Train accuracy = 95.0%<br>
 2017-06-15 13:50:09.216944: Step 3999: Cross entropy = 0.186286<br>
