--- a/tutorial.html
+++ b/tutorial.html
@@ -157,7 +157,7 @@ To test the retrained model use this script<br>
 <a href="label_images.py">label_images.py</a><br>	
 <table>
         <tr  bgcolor="#CCFFFF"><td>	
-	<xmp>python label_images.py  $TEST_IMAGE_PATH  </xmp>
+	<xmp>python label_image.py  $TEST_IMAGE_PATH  </xmp>
 	</td>
    </tr>
 </table>
