--- a/tutorial.html
+++ b/tutorial.html
@@ -154,7 +154,7 @@ trained on.  The magic of transfer learning, also called fine-tuning, is that lo
 
 To test the retrained model use this script<br>	
 	
-<a href="label_images.py">label_images.py</a><br>	
+<a href="label_image.py">label_image.py</a><br>	
 <table>
         <tr  bgcolor="#CCFFFF"><td>	
 	<xmp>python label_image.py  $TEST_IMAGE_PATH  </xmp>
