--- a/start.html
+++ b/start.html
@@ -83,7 +83,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 
 
 </ol> 
-<!--COMMENTED	
+<!--COMMENTED-->	
 <li><h2>My "Hello World!" example</h2></li>
 To get more familiar with CNNs, let's start with the classification of MNIST database, which is used as the "Hello World!" example in Deep CNNs. <br> 
 The first successful CNN in MNIST classification is called LeNet. <br>
@@ -169,7 +169,7 @@ To test the retrained model use this script<br>
 Final test accuracy = 93.7% (N=378)<br>
 Converted 2 variables to const ops.<br>
 -->
-        -->
+        <!-- -->
         </ol>      
 
 
