--- a/tutorial.html
+++ b/tutorial.html
@@ -15,7 +15,7 @@
   <!-- Install -->	
 	
   <li><h2> Install TensorFlow with virtual Python environment </h2></li>
-  TensorFlow can be installed in Ubuntu, Mac and Windows (not sure about its stability under Windows OS).<br><br>
+  TensorFlow can be installed in Ubuntu, Mac and Windows.<br><br>
   
 	
   TensorFlow can be installed using four different mecanisms. We will use the recomenaded virtualenv instalation. The steps are as follows: <br><br>
