--- a/tutorial.html
+++ b/tutorial.html
@@ -5,8 +5,7 @@
 <h2>Building CNNs based-classifiers with TensorFlow </h2>	
 <h2>Content:</h2><br>
 <ol>  
-<li>Prerequisites: Previous programming experience in Python or in other languages is advised to take the most of the workshop. 
-	Additionally, some familiarity with machine learning is also necessary.	
+<li>Prerequisites: Previous programming experience in Python and some familiarity with machine learning are necessary.	
 <li>Install TensorFlow with virtual Python environment 
 <li>My Hello World! example	
 <li>Classify Imagenet		
