--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <h1>Siham Tabik</h1>
 
-School of Informatics<br>
+Dpt. Computer Science and Artificial Intelligence<br>
 University of Granada<br>
 Email: siham AT ugr.es<br>
 
