--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ Email: siham AT ugr.es<br>
 <li>	Yann LeCun, Leon Bottou, Yoshua Bengio, and Patrick Haffner. Gradient-based learning applied to
 document recognition. Proc. IEEE, 86(11):2278–2324, 1998.
 
+	
+<li>	A. Krizhevsky, I. Sutskever, G.E. Hinton. ImageNet Classification with Deep Convolutional Neural
+Networks. In Proceedings of the 25th International Conference on Neural Information Processing Systems,
+Lake Tahoe, NV, USA, 3–6 December 2012; Curran Associates Inc.: Red Hook, NY, USA, 2012; Volume 1,
+pp. 1097–1105.
 </ul>
 </ol>
 <h2></h2>    
