--- a/tutorial.html
+++ b/tutorial.html
@@ -59,6 +59,10 @@ If you don't have GPUs with the mentioned characteristics then:<br>
 <xmp> (tensorflow)$ pip install --upgrade tensorflow      # for Python 2.7</xmp>
 <xmp> (tensorflow)$ pip3 install --upgrade tensorflow     # for Python 3.n</xmp>
 </td> </tr></table>
+
+<!-- Check installation is OK -->	
+<li> Check the location where pip installed tensorflow packages <br>
+pip show tensorflow <br>
 	
 <!-- Check installation is OK -->	
 <li> Check the installation has been done successfully <br>
