--- a/tutorial.html
+++ b/tutorial.html
@@ -91,7 +91,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 
 
 </ol> 
-<li><h2>My first CNN</h2></li>
+<li><h2>Building my first CNN</h2></li>
 To get more familiar with CNNs, let's start with the classification of MNIST database. <br> 
 The first successful CNN in MNIST classification is called LeNet. <br>
 The implementation of LeNet-5-like CNN can be found in this folder. <br>
