--- a/tutorial.html
+++ b/tutorial.html
@@ -96,13 +96,15 @@ To get more familiar with CNNs, let's start with the classification of MNIST dat
 The first successful CNN in MNIST classification is called LeNet. <br>
 The implementation of LeNet-5-like CNN can be found in this folder. <br>
 
-	
+download my_first_cnn_mnist.py	<br>
+<a href="my_first_cnn_mnist.py">	
+<!-- Check installation is OK	
 <table><tr  bgcolor="#CCFFFF"><td>	
 <xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
 </td> </tr></table>
 	
 Have a look at how LeNet is implemented, convolutional.py, then run it using:
-	
+ -->	
 <table><tr  bgcolor="#CCFFFF"><td>	
 <xmp>python   convolutional.py # train on CPU/GPU depending on the installation</xmp>
 </td> </tr></table>	
