--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Email: siham AT ugr.es<br>
 
 <ol>	
  
-<li><a href="tutorial.html" target="_blank"><h2> Hands-on lab: Building CNNs based-classifiers with TensorFlow</h2></a>
+<li><h2><a href="tutorial.html" target="_blank"> Hands-on lab: Building CNNs based-classifiers with TensorFlow</h2></a>
 	
 <li><h2> Influential papers in CNNs </h2>  
 <ul> 
