--- a/tutorial.html
+++ b/tutorial.html
@@ -97,7 +97,8 @@ The first successful CNN in MNIST classification is called LeNet. <br>
 The implementation of LeNet-5-like CNN can be found in this folder. <br>
 
 
-download this file:<br>	<a href="my_first_cnn_mnist.py">my_first_cnn_mnist.py</a><br>
+download this file:<br>	<a href="convolutional.py">my_first_cnn_mnist.py</a><br> Then, <br>  
+	
 	
 <!-- Check installation is OK	
 <table><tr  bgcolor="#CCFFFF"><td>	
