--- a/tutorial.html
+++ b/tutorial.html
@@ -97,16 +97,17 @@ The first successful CNN in MNIST classification is called LeNet. <br>
 The implementation of LeNet-5-like CNN can be found in this folder. <br>
 
 
-download this file:<br>	<a href="convolutional.py">my_first_cnn_mnist.py</a><br> Then, <br>  
+download this file:<br>	<a href="convolutional.py">convolutional.py</a><br> Then, <br>  
 	
 	
 <!-- Check installation is OK	
 <table><tr  bgcolor="#CCFFFF"><td>	
 <xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
 </td> </tr></table>
-	
-Have a look at how LeNet is implemented, convolutional.py, then run it using:
- -->	
+-->	
+Complete lines 43-48 with the correct dimension. 
+<br> the code can be run as:
+ 	
 <table><tr  bgcolor="#CCFFFF"><td>	
 <xmp>python   convolutional.py # train on CPU/GPU depending on the installation</xmp>
 </td> </tr></table>	
