--- a/tutorial.html
+++ b/tutorial.html
@@ -97,7 +97,7 @@ The first successful CNN in MNIST classification is called LeNet. <br>
 The implementation of LeNet-5-like CNN can be found in this folder. <br>
 
 
-download this file:<br>	<a href="convolutional.py">convolutional.py</a><br> Then, <br>  
+download this code: <a href="convolutional.py">convolutional.py</a> then, 
 	
 	
 <!-- Check installation is OK	
@@ -105,7 +105,7 @@ download this file:<br>	<a href="convolutional.py">convolutional.py</a><br> Then
 <xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
 </td> </tr></table>
 -->	
-Complete lines 43-48 with the correct dimension. 
+complete lines 43-48 with the correct dimensions. 
 <br> the code can be run as:
  	
 <table><tr  bgcolor="#CCFFFF"><td>	
