--- a/tutorial.html
+++ b/tutorial.html
@@ -7,7 +7,7 @@
 <ol>  
 <li>Prerequisites: Previous programming experience in Python and some familiarity with machine learning are necessary.	
 <li>Install TensorFlow with virtual Python environment 
-<li>My Hello World! example	
+<li>First CNN classifcation model	
 <li>Classify Imagenet		
 <li>Retrain on New dataset
 </ol>
