--- a/tutorial.html
+++ b/tutorial.html
@@ -184,7 +184,7 @@ Converted 2 variables to const ops.<br>
 -->
 <li><h2>Important terminology in DL</h2></li>	
 	
-<h1> batch</h1>: Convolutional Neural Networks (CNNs) do not process the images one-at-a-time. To increase their throughput, CNNs
+<h1> batch size</h1> Convolutional Neural Networks (CNNs) do not process the images one-at-a-time. To increase their throughput, CNNs
 process the data in batches. Suppose a CNN that is trained on  RGB (3-channel) images that are 256x256 pixels. 
 	A single image can be represented by a 3 x 256 x 256 matrix. If you set your batch size to be 10, 
 	that means you’re concatenating 10 images together into a 10 x 3 x 256 x 256 matrix. In practice, you’ll create 
