--- a/tutorial.html
+++ b/tutorial.html
@@ -130,7 +130,7 @@ If you wish to supply other JPEG images, you may do so by editing the <xmp> --im
 
 If you download the model data to a different directory, you will need to point <xmp>--model_dir</xmp> to the directory used.<br>
 
-  <li><h2>Retrain on a New dataset</h2></li>
+  <li><h2>Transfer Learning: Retrain on a New dataset</h2></li>
 This consists of finetuning GoogLeNet's final layer on a new dataset, flower_photos, as follows: <br> 
 Download new dataset <br>
  <table>
