--- a/tutorial.html
+++ b/tutorial.html
@@ -95,11 +95,9 @@ If the system outputs the following, then you are ready to begin writing TensorF
 <li><h2>Building my first CNN</h2></li>
 To get more familiar with CNNs, let's start with the classification of MNIST database. <br> 
 The first successful CNN in MNIST classification is called LeNet. <br>
-The implementation of LeNet-5-like CNN can be found in this folder. <br>
+Let's implement a LeNet-5-like CNN shown in the figure. <br>
 
-
-download this code: <a href="convolutional.py">convolutional.py</a> then, 
-	
+<img src="LeNet-like-CNN.jpg" alt="LeNet-like-CNN">
 	
 <!-- Check installation is OK	
 <table><tr  bgcolor="#CCFFFF"><td>	
