--- a/tutorial.html
+++ b/tutorial.html
@@ -97,6 +97,8 @@ To get more familiar with CNNs, let's start with the classification of MNIST dat
 The first successful CNN in MNIST classification is called LeNet. <br>
 Let's implement a LeNet-5-like CNN shown in the figure. <br>
 
+<img class="sealImage" alt="Image of Seal" src="LeNet-like-CNN.jpg">
+<br>
 <img src="LeNet-like-CNN.jpg" alt="LeNet-like-CNN">
 	
 <!-- Check installation is OK	
