--- a/tutorial.html
+++ b/tutorial.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
 <h2>Building CNNs based-classifiers with TensorFlow </h2>	
 <h2>Content:</h2><br>
 <ol>  
@@ -105,8 +108,9 @@ Let's implement a LeNet-5-like CNN shown in the figure. <br>
 <table><tr  bgcolor="#CCFFFF"><td>	
 <xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
 </td> </tr></table>
--->	
+	
 complete lines 43-48 with the correct dimensions. 
+-->
 <br> the code can be run as:
  	
 <table><tr  bgcolor="#CCFFFF"><td>	
