--- a/tutorial.html
+++ b/tutorial.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
 img {
     max-width: 100%;
     max-height: 100%;
 }
+
+.portrait {
+    height: 80px;
+    width: 30px;
+}
+
+.landscape {
+    height: 30px;
+    width: 80px;
+}
+
+.square {
+    height: 75px;
+    width: 75px;
+}
+	<body>
+
 <h2>Building CNNs based-classifiers with TensorFlow </h2>	
 <h2>Content:</h2><br>
 <ol>  
@@ -100,10 +116,12 @@ To get more familiar with CNNs, let's start with the classification of MNIST dat
 The first successful CNN in MNIST classification is called LeNet. <br>
 Let's implement a LeNet-5-like CNN shown in the figure. <br>
 
-<img class="sealImage" alt="Image of Seal" src="LeNet-like-CNN.jpg">
+
+
+<div class="square">
+    <img src="LeNet-like-CNN.jpg">
+</div>	
 <br>
-<img src="LeNet-like-CNN.jpg" alt="LeNet-like-CNN">
-	
 <!-- Check installation is OK	
 <table><tr  bgcolor="#CCFFFF"><td>	
 <xmp>cd ./tensorflow/lib/python2.7/site-packages/tensorflow/models/image/mnist/</xmp>
