--- a/tutorial.html
+++ b/tutorial.html
@@ -117,7 +117,7 @@ The first successful CNN in MNIST classification is called LeNet. <br>
 Let's implement a LeNet-5-like CNN shown in the figure. <br>
 
 
-
+Square Div
 <div class="square">
     <img src="LeNet-like-CNN.jpg">
 </div>	
