--- a/tutorial.html
+++ b/tutorial.html
@@ -95,7 +95,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 <li><h2>Building my first CNN</h2></li>
 To get more familiar with CNNs, let's start with the classification of MNIST database. <br> 
 The first successful CNN in MNIST classification is called LeNet. <br>
-Let's implement a LeNet-5-like CNN shown in the figure. <br>
+Let's implement the LeNet-like CNN shown in this figure. <br>
 
 
 
