--- a/tutorial.html
+++ b/tutorial.html
@@ -92,7 +92,11 @@ If the system outputs the following, then you are ready to begin writing TensorF
 
 
 </ol> 
-<li><h2>Building my first CNN</h2></li>
+	
+<li><h2>Warming up examples before building a new CNN</h2></li>
+<a href="warming.html">Go to examples.</a>
+
+	<li><h2>Building my first CNN</h2></li>
 To get more familiar with CNNs, let's start with the classification of MNIST database. <br> 
 The first successful CNN in MNIST classification is called LeNet. <br>
 Let's implement the LeNet-like CNN shown in this figure. <br>
