--- a/tutorial.html
+++ b/tutorial.html
@@ -93,7 +93,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 
 </ol> 
 	
-<li><h2>Warming up examples before building a new CNN</h2></li>
+<li><h2>Warming up with examples before building a new CNN</h2></li>
 <a href="warming.html">Go to examples.</a>
 
 	<li><h2>Building my first CNN</h2></li>
