--- a/tutorial.html
+++ b/tutorial.html
@@ -190,6 +190,7 @@ Final test accuracy = 93.7% (N=378)<br>
 Converted 2 variables to const ops.<br>
 -->
 <li><h2>Important terminology in DL</h2></li>	
+<br>This list is not updated yet!!!<br>
 	
 <h3> batch size</h3> Convolutional Neural Networks (CNNs) do not process the images one-at-a-time. To increase their throughput, CNNs
 process the data in batches. Suppose a CNN that is trained on  RGB (3-channel) images that are 256x256 pixels. 
@@ -213,7 +214,6 @@ reduce the weights to be updated, this learning optimization technique is called
 is therefore a technique used to decrease the overfitting within a network with many layers and/or
 neurons. In general, the dropout layers are positioned after the layers that possess a large amount of
 trainable neurons.<br>	
-This list is not updated yet!!!
 	</ol>      
 
 
