--- a/tutorial.html
+++ b/tutorial.html
@@ -6,7 +6,8 @@
 <h2>Content:</h2><br>
 <ol>  
 <li>Prerequisites: Previous programming experience in Python and some familiarity with machine learning are necessary.	
-<li>Install TensorFlow with virtual Python environment 
+<li>Install TensorFlow with virtual Python environment
+<li>Warming up with examples before building a new CNN
 <li>First CNN classifcation model	
 <li>Classify Imagenet		
 <li>Retrain on New dataset
@@ -94,7 +95,7 @@ If the system outputs the following, then you are ready to begin writing TensorF
 </ol> 
 	
 <li><h2>Warming up with examples before building a new CNN</h2></li>
-<a href="warming.html">Go to examples.</a>
+<a href="warmingUp.html">Go to examples.</a>
 
 	<li><h2>Building my first CNN</h2></li>
 To get more familiar with CNNs, let's start with the classification of MNIST database. <br> 
