--- a/tutorial.html
+++ b/tutorial.html
@@ -5,7 +5,7 @@
 <h2>Building CNNs based-classifiers with TensorFlow </h2>	
 <h2>Content:</h2><br>
 <ol>  
-<li>Prerequisites: Previous programming experience in Python and some familiarity with machine learning are necessary.	
+<li>Prerequisites	
 <li>Install TensorFlow with virtual Python environment
 <li>Warming up with examples before building a new CNN
 <li>First CNN classifcation model	
@@ -16,7 +16,7 @@
 	
 <ol>
   <!-- Install -->	
-	
+  <li><h2>Prerequisites</h2></li>  Previous programming experience in Python and some familiarity with machine learning are necessary.	
   <li><h2> Install TensorFlow with virtual Python environment </h2></li>
   TensorFlow can be installed in Ubuntu, Mac and Windows.<br><br>
   
