--- a/warmingUp.html
+++ b/warmingUp.html
@@ -107,17 +107,17 @@ Dropout es una tecnica que se usa para reduce el overfitting, se suele colocar d
     <td>ReLU</td>
   </tr>
     <tr>
-    <td>Second</td>
+    <td>Third</td>
     <td>60</td>
     <td>ReLU</td>
   </tr>
     <tr>
-    <td>Second</td>
+    <td>Fourth</td>
     <td>30</td>
     <td>ReLU</td>
   </tr>
    <tr>
-    <td>Second</td>
+    <td>Fifth</td>
     <td>10</td>
     <td>ReLU</td>
   </tr> 
