--- a/warmingUp.html
+++ b/warmingUp.html
@@ -119,7 +119,7 @@ Dropout es una tecnica que se usa para reduce el overfitting, se suele colocar d
    <tr>
     <td>Fifth</td>
     <td>10</td>
-    <td>ReLU</td>
+    <td>softmax</td>
   </tr> 
 
  </table><br>
