--- a/warmingUp.html
+++ b/warmingUp.html
@@ -156,9 +156,9 @@ The accuracy of this model can be  improved by including the droput optimization
 </table><br>
 <table><tr  bgcolor="#CCFFFF"><td>		
 
-<xmp>import tensorflow as tf
-<xmp>import numpy as np
-<xmp>from tensorflow.examples.tutorials.mnist import input_data
+<xmp>import tensorflow as tf</xmp>
+<xmp>import numpy as np</xmp>
+<xmp>from tensorflow.examples.tutorials.mnist import input_data</xmp>
 
 <xmp>batch_size = 128</xmp>
 <xmp>test_size = 256</xmp>
